# pypdbio

./: .gitignore  LICENSE  README.md  pypdbio.py  pyproject.toml  setup.py
demo/: copy_pdb.py  create_pdb_from_scratch.py
docs/: reference.md
pypdbio/: __init__.py  fetcher.py  models.py  reader.py  reader_helper.py  unit.py  utils.py  writer.py  writer_helper.py
test/: test.py  test_fetch.py  test_model.py  test_reader.py  test_utils.py  test_writer.py
