[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypdbio"
version = "1.0.1"
description = "A package for downloading/reading/writing pdb file"
license = "MIT"
authors = [
  { name = "Xiaoyang Liu", email = "liuxiaoyang_Q@outlook.com" }
]
dependencies = ["requests"]

[tool.setuptools]
packages = ["pypdbio"]

